--- a/config/settings.yml
+++ b/config/settings.yml
@@ -9,7 +9,7 @@ links:
 validations:
   user:
     email:
-      regex: /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i.freeze
+      regex: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
       max_length: 255
     password:
       min_length: 6
